# Stock-Prediction-System

./: Dockerfile  README.md  deploy.sh  helloWorld.py  pyproject.toml  setup.py
config/: config.yaml  path_config.yaml
data/feature/: stocks_list.csv
data/processed/: stock_news_extraction.json
envs/: Dockerfile
notebooks/新聞輿情系統/新聞爬蟲/: anue.ipynb  cmoney.ipynb  ctee.ipynb
stock_prediction_system/: main.py  main_v2.py
stock_prediction_system/controller/: google_real_time_news.py  pipelines.py  stock_list.py
stock_prediction_system/model/: no_sql_db_manager.py  sql_db_manager.py
stock_prediction_system/utils/: extract_path.py
新聞輿情系統/新聞爬蟲/: udn_stock_newest.py
